--- a/contrast_security.yaml
+++ b/contrast_security.yaml
@@ -1,7 +1,7 @@
 api: 
-  url: https://ce.contrastsecurity.com/Contrast
-  api_key: jE6657GKeN8eIz1pO12DZrCnFMgu8Opd
-  service_key: CNPXTCCFMDCLU9IX
-  user_name: agent_f1c88e2a-6136-4065-8396-40bc0bf86c10@ShrutisOrg
+  url: https:/------------------Contrast
+  api_key: jE___________gu8Opd
+  service_key: CN_______-U9IX
+  user_name: agent_----------------------rutisOrg
 log:
   level: DEBUG
