--- a/contrast_security.yaml
+++ b/contrast_security.yaml
@@ -1,7 +1,7 @@
 api: 
   url: https://ce.contrastsecurity.com/Contrast
-  api_key: o7Smr3N74U9qtlq2E8u5IExp3uCVk9Yg
-  service_key: J5NOS7FQ6ESNI76W
-  user_name: agent_157ab11b-a8b3-44ef-b528-89d158bd2f22@RahulsOrg
+  api_key: o7Smr3N74U9IExp3uCVk9Yg
+  service_key: J5NOESNI76W
+  user_name: agent_157ab11b--b528-89d158bd2f22@RahulsOrg
 log:
   level: DEBUG
